--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,3 +1,8 @@
+::-webkit-color-swatch,
+::-moz-color-swatch {
+  border-color: transparent;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -12,45 +17,55 @@ body {
   height: 18;
   position: absolute;
   pointer-events: none;
+  /* filter: drop-shadow(1.5px 1.5px 1.5px); */
 }
 
 #skin_select {
   position: absolute;
-  display: flex;
+  display: none;
+  /* display: flex; */
   flex-direction: column;
-  min-width: 150px;
   border: 1px solid;
   border-radius: 5px;
   z-index: 1;
+  padding: 5px;
   background-color: white;
 }
 
-.skin {
+.row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  width: 100%;
+}
+
+.item {
   box-sizing: border-box;
   display: flex;
   align-items: center;
-  width: 100%;
-  border-bottom: 1px solid;
-  /* border-radius: 5px; */
+  border: 1px solid;
+  border-radius: 15px;
   padding: 5px;
+  margin: 5px;
+  width: 45px;
+  height: 45px;
+  cursor: none;
 }
 
-.skin:last-child {
-  border-bottom: none;
+.item:hover {
+  filter: brightness(150%);
 }
 
-.skin:hover {
-  background-color: gray;
+.item svg {
+  width: 25px;
+  margin: auto;
 }
 
-/* .skin * {
-  pointer-events: none;
-} */
-
-.skin img {
-  height: 25px;
-}
-
-.skin div {
+.item div {
   margin-left: 5px;
+}
+
+.item.color {
+  border-radius: 50%;
+  border-width: 5px;
 }
